Redoing UI/UX in favor of Mobile first design practices. I stripped the background image, and blurred background because I was facing several issues. One of the issues I was having was overflow issues. I also some overstyling I had to refactor. By simplifying the styles for now, I hope to gain more control and have a better understanding of the HTML/CSS necessary to create a responsive, accessible web page.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,10 @@
 @import url('main.css');
-* {
-  box-sizing: border-box;
+
+h1 {
+  font-size: 2rem;
+  margin: 0;
 }
-.content {
-  background-color: white;
-  color: black;
-  font-size: 1.75rem;
+
+p {
+  font-size: 2rem;
 }
