--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,10 +1,15 @@
 body,
 html {
   margin: 0;
-  line-height: 1.6;
   letter-spacing: -0.00278rem;
   font-size: 1rem;
   font-family: Arial, x-locale-body, sans-serif;
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  background-color: cadetblue;
   height: 100%;
 }
 
@@ -13,47 +18,20 @@ html {
   font-size: 5rem;
 }
 
-.content {
-  width: max-content;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .bg {
-  /* The image used */
-  background-image: url('../images/OGA3FX0.jpg');
-
-  /* Add blur effect */
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-
   /* Full height */
   height: 100%;
-
-  /* Center and scale image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
-.bg-text {
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+.content {
   color: white;
   font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  min-width: 80%;
-  max-width: max-content;
-  max-height: 70%;
-  min-height: 70%;
   text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
 }
 
 form {
@@ -70,6 +48,8 @@ button {
   display: block;
   border-radius: 10px;
   padding: 1.5rem 2rem;
+  position: relative;
+  top: 0;
   background-color: turquoise;
   font-weight: 800;
   font-size: 1.5rem;
@@ -105,7 +85,7 @@ li {
 }
 nav {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
 }
 .hidden {
   display: none;
